<resources>
    <string name="app_name">CV4J Demo</string>

    <string name="cv4j">cv4j</string>
    <string name="io">io读写</string>
    <string name="filters">常用滤镜</string>
    <string name="spatial_conv">空间卷积</string>
    <string name="binary">二值分析</string>
    <string name="hist">直方图</string>
    <string name="template_match">模版匹配</string>
    <string name="pixel_operator">像素操作</string>

    <string name="finish_by_back_again">再按一次退出程序</string>
</resources>
