<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 Antonio Leiva
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_cv4j"
            android:checked="true"
            android:icon="@drawable/menu_safinfo"
            android:title="@string/cv4j"/>

        <item
            android:id="@+id/drawer_io"
            android:checked="true"
            android:icon="@drawable/menu_safinfo"
            android:title="@string/io"/>

        <item
            android:id="@+id/drawer_filters"
            android:icon="@drawable/menu_general_anno"
            android:title="@string/filters"/>

        <item
            android:id="@+id/drawer_spatial_conv"
            android:icon="@drawable/menu_general_anno"
            android:title="@string/spatial_conv"/>

        <item
            android:id="@+id/drawer_binary"
            android:icon="@drawable/menu_general_anno"
            android:title="@string/binary"/>

        <item
            android:id="@+id/drawer_hist"
            android:icon="@drawable/menu_general_anno"
            android:title="@string/hist"/>

    </group>
</menu>